- Renamed `out` and `outint` to `send` (for both uses). - Basic command skeleton.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,9 @@ name: Rubyc
 main: org.tal.rubychip.RubycLibrary
 version: 0.1
 depend: [RedstoneChips]
+commands:
+  rubyc:
+    description: View and edit the chip script.
+    usage: |
+      `rubyc`
+    aliases: [rb]
